--- a/spring-boot-example/src/main/resources/application.properties
+++ b/spring-boot-example/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.web-application-type=none
 spring.artemis.mode=native
-spring.artemis.host=artemis01.etp.sm-soft.ru
-spring.artemis.port=61636
+spring.artemis.broker-url=(tcp://artemis-ext-01.etp.sm-soft.ru:61616,tcp://artemis-ext-02.etp.sm-soft.ru:61616)
+
 spring.artemis.user=testoiv
 spring.artemis.password=testoiv
 spring.artemis.pool.enabled=true
