--- a/spring-boot-example/src/main/resources/application.properties
+++ b/spring-boot-example/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.main.web-application-type=none
-spring.artemis.mode=native
-spring.artemis.broker-url=(tcp://artemis-ext-01.etp.sm-soft.ru:61616,tcp://artemis-ext-02.etp.sm-soft.ru:61616)
+spring.activemq.broker-url=failover:(tcp://artemis-int-01.etp.sm-soft.ru:61616,tcp://artemis-int-02.etp.sm-soft.ru:61616)?maxReconnectAttempts=-1
 
-spring.artemis.user=testoiv
-spring.artemis.password=testoiv
-spring.artemis.pool.enabled=true
-spring.artemis.pool.max-connections=3
-spring.artemis.pool.max-sessions-per-connection=10
+spring.activemq.user=testoiv
+spring.activemq.password=testoiv
+spring.activemq.pool.enabled=true
+spring.activemq.pool.max-connections=3
+spring.activemq.pool.max-sessions-per-connection=10
 spring.jms.listener.concurrency=1
 spring.jms.listener.max-concurrency=3
 
